--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,7 @@
+main {
+    max-width: 840px;
+}
+
 nav {
     background-color: steelblue;
     padding: 10px;
@@ -13,15 +17,35 @@ h1 {
     color: steelblue;
 }
 
-img {
+main img {
     width: 150px;
     height: auto;
     border: 1px solid steelblue;
-    padding 2px;
+    padding: 2px;
     box-shadow: 0 0 30px gray;
 }
 
 p {
-    padding: 10px;
+    padding: 0;
 }
 
+aside {
+    width: 300px;
+    margin: 10px;
+    border: 1px solid black;
+    padding: 5px;
+    background-color: gray;
+    color: whitesmoke;
+    text-align: center;
+}
+
+aside img {
+    width: 280px;
+    height: auto;
+}
+
+footer {
+    margin-top: 15px;
+    border-top: 2px solid black;
+    text-align: center;
+}
