--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,20 +1,36 @@
-main {
+header, footer, .grid {
     max-width: 840px;
+    margin: 0 auto;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: 40% 60%;
+    align-items: center;
 }
 
 nav {
     background-color: steelblue;
     padding: 10px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 20px;
 }
 
 nav a {
     color: white;
     display: block;
     padding: 20px;
+    display: block;
+    text-decoration: none;
 }
 
 h1 {
     color: steelblue;
+    border-bottom: solid 1px;
 }
 
 main img {
@@ -22,13 +38,19 @@ main img {
     height: auto;
     border: 1px solid steelblue;
     padding: 2px;
+    margin: 10px;
     box-shadow: 0 0 30px gray;
+    float: right;
 }
 
 p {
     padding: 0;
 }
 
+main {
+    grid-column: 2;
+    
+}
 aside {
     width: 300px;
     margin: 10px;
@@ -37,6 +59,8 @@ aside {
     background-color: gray;
     color: whitesmoke;
     text-align: center;
+    grid-column: 1;
+    grid-row: 1;
 }
 
 aside img {
