--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -120,13 +120,19 @@ article p {
 
 }
 
+#adventure figure {
+    width: 150px;
+    height: 150px;
+    margin: 0;
+}
+
 #adventure img {
     width: 150px;
     height: 150px;
 }
 
 footer {
-    margin-top: 40px;
+    margin-top: 60px;
     display: flex;
     justify-content: right;
     align-items: center;
@@ -144,5 +150,9 @@ footer {
 
 footer p {
     padding-right: 10px;
+    text-align: center;
+}
+
+figcaption {
     text-align: center;
 }
