--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,7 +12,7 @@ header, footer, .grid {
 .grid {
     display: grid;
     grid-template-columns: 45% 55%;
-    align-items: center;
+    align-items: stretch;
 }
 
 nav {
