--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -134,7 +134,7 @@ article p {
 footer {
     margin-top: 60px;
     display: flex;
-    justify-content: right;
+    justify-content: center;
     align-items: center;
    
 }
